fixed spacing

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -45,7 +45,7 @@ $navigation_fade_animation: 0.75s;
 
 @media (min-width: $size__lg) {
   .header-overlay {
-    margin-top: 220px;
+    margin-top: 230px;
   }
 }
 
