--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -195,6 +195,12 @@ $marginx-xxxl: 23vw;
   }
 }
 
+article.post,
+article.message,
+article.page {
+  margin-top: 30px;
+}
+
 /*--------------------------------------------------------------
 ## Footer
 --------------------------------------------------------------*/
